# anime-craft

./: .gitignore  .golangci.yml  Taskfile.yml  go.mod  go.sum  main.go  main_lineart.go
.github/workflows/: ci.yml  e2e.yml  frontend.yml  go.yml  inference.yml
docs/: architecture.md  product-spec-template.md  product-spec.md
e2e/: conftest.py  helpers.py  package-lock.json  package.json  playwright.config.ts  requirements.txt  test_00_dump_tree.py  test_navigation_and_pages.py  test_reference_image_flow.py
e2e/tests/: debug-smoke.spec.ts  navigation.spec.ts  session-flow.spec.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  test-setup.ts  wails-mock-runtime.ts
frontend/src/__mocks__/: wails-bindings.ts
frontend/src/contexts/: SessionContext.tsx
frontend/src/hooks/: useDrawingCanvas.ts
frontend/src/pages/: FeedbackPage.tsx  HomePage.tsx  ProgressPage.tsx  SessionPage.tsx  SettingsPage.tsx
frontend/src/utils/: debugLog.ts
gateway/cmd/anime-craft/: main.go  main_lineart.go
gateway/internal/ai/: mock.go
gateway/internal/bff/: drawing.go  feedback.go  feedback_generator.go  feedback_test.go  lineart.go  log_service.go  progress.go  reference.go  reference_test.go  session.go  session_test.go  settings.go
gateway/internal/inference/: client.go  client_test.go  process.go
gateway/internal/lineart/: extractor.go  extractor_test.go
gateway/internal/model/: types.go
gateway/internal/repository/: achievement.go  db.go  drawing.go  drawing_test.go  feedback.go  feedback_test.go  reference.go  reference_test.go  (+2 more)
inference/: pyproject.toml
inference/lineart/: .gitignore  convert_to_onnx.py  pyproject.toml  test_convert.py
inference/src/animecraft_inference/: __init__.py  __main__.py  config.py  server.py
inference/src/animecraft_inference/feedback/: __init__.py  generator.py  prompt.py
inference/src/animecraft_inference/lineart/: __init__.py  extractor.py
inference/tests/: test_feedback.py  test_lineart.py
internal/ai/: client.go  mock.go
internal/bff/: binding_ids_test.go  drawing.go  drawing_test.go  feedback.go  feedback_test.go  integration_test.go  lineart.go  progress.go  progress_test.go  reference.go  reference_test.go  reference_transport_test.go  session.go  session_test.go  settings.go  settings_test.go
internal/lineart/: extractor.go  extractor_test.go
internal/model/: types.go
internal/repository/: achievement_test.go  db.go  db_test.go  drawing.go  drawing_test.go  feedback.go  feedback_test.go  reference.go  reference_test.go  session.go  session_test.go
proto/: inference.proto
(+38 files in other folders)
